test/Parse/structure_overflow.swift
// RUN: not %target-swift-frontend -typecheck %s 2>&1 | %FileCheck %s

// level 512.
// CHECK: :[[@LINE+1]]:256: error: structure nesting level exceeded maximum of 256
[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[({[(


;blah blah blah

// Note: extra newlines below ensure that context printing doesn't show the
// lines that we shouldn't see.



// CHECK-NOT: ';'
